--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 /* Mobile first */
@@ -46,6 +46,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 2rem;
 }
 
 .output-cointainer h1 {
@@ -57,5 +58,27 @@
   margin-top: 25px;
   padding: 30px;
   border-radius: 5px;
-  background-color: #fff;
+  border-style: solid;
+  border-radius: 5px;
+  background-color: rgb(36, 201, 201);
+}
+@media screen and (max-width: 1000px) {
+  #models,
+  #brand,
+  .wrapper {
+    background-color: darkkhaki;
+  }
+  .output-cointainer #output {
+    width: 80%;
+    margin-top: 25px;
+    font-family: fantasy;
+    padding: 30px;
+    font-size: 18px;
+    text-align: center;
+    border-radius: 5px;
+    background-color: rgb(10, 151, 134);
+    border-radius: 2rem;
+    border-style: solid;
+    border-color: #222;
+  }
 }
